@@ -21,6 +21,8 @@ The contributors that suggested a given feature are shown in []. Thanks!
 
 ****  Fix genblk naming to match IEEE (#2686). [tinshark]
 
+****  Fix error when dotted refers to missing module (#2095). [Stefan Wallentowitz]
+
 
 * Verilator 4.106 2020-12-02
 
